# simple-base64

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DETAIL.md  LICENSE.txt  README.md  SECURITY.md  conanfile.py  coverage.cmake  lint.cmake
.github/workflows/: cmake-multi-platform.yml
task/QualityAssurance/: Security_audit.md
template/app_target/: CMakeLists.txt  main.cpp
template/lib_target/: CMakeLists.txt
template/module/app/: CMakeLists.txt  main.cpp
template/module/lib/: CMakeLists.txt
template/module/lib/inc/lib/detail/cl/: cl.h
template/module/lib/inc/lib/detail/def/: def.h
template/module/lib/inc/lib/detail/fn/: fn.h
template/module/lib/inc/lib/public/cl/: cl.h
template/module/lib/inc/lib/public/def/: def.h
template/module/lib/inc/lib/public/fn/: fn.h
template/module/lib/src/detail/fn/: fn.cpp
template/module/lib/src/public/cl/: cl.cpp
template/module/subsystem/: CMakeLists.txt
template/module/subsystem/doc/: DETAIL.md  README.md
template/module/test/: CMakeLists.txt  main.cpp  main_nonfunctional.cpp  specs_unitname.cpp  specs_unitname_nonfunctional.cpp
template/test_target/: CMakeLists.txt  all_targetname_specs.cpp
template/test_target/specs_unitname/: CMakeLists.txt  specs_unitname.cpp
test_package/: CMakeLists.txt  conan_package_test.cpp  conanfile.py  sb64_conan_package_test.cpp
util/ci/conan/: macos-latest-gcc-settings.yml  macos-latest-settings.yml  ubuntu-latest-clang-settings.yml  ubuntu-latest-gcc-settings.yml  windows-latest-settings.yml
util/ci/conan/macos-latest-clang/profiles/: default
util/ci/conan/macos-latest-gcc/profiles/: default
util/ci/conan/ubuntu-latest-clang/profiles/: default
util/ci/conan/ubuntu-latest-gcc/profiles/: default
util/task/: coverage.cmake  lint.cmake  package.cmake
